# ui_dress_tests

./: .travis.yml  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
common/: constants.py
locators/: account_page_locators.py  base_page_locators.py  course_page_locators.py  create_course_page_locators.py  login.py  login_page_locators.py  personal_data_page_locators.py  sign_up_page_locators.py
models/: auth.py  create_course.py  personal_data.py  sign_up.py
pages/: application.py  base_page.py  create_course_page.py  login_page.py  personal_data_page.py  sign_up_page.py
tests/auth/: test_auth.py
tests/course_creation/: test_course_creation.py
tests/personal_data/: test_personal_data.py
tests/sign_up/: test_sign_up.py
