[tool.poetry]
name = "ui tests"
version = "0.1.0"
description = ""
authors = ["Alexander Lozovoy <berpress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
pytest = "^6.2.4"
webdriver-manager = "^3.4.2"
Faker = "^8.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
